# littlevgl_jz2440_v7

./: .gitignore  CMakeLists.txt  README.md  lv_drv_conf.h  main.c
lv_drivers/display/: myfb.c  myfb.h
lv_drivers/indev/: common.h  debug.h  myts.c  myts.h  task.c  task.h
tslib/: config.h  ts_config.c  ts_load_module.c
